--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>ThrowingTracker - Training Log</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <div id="root">
@@ -18,21 +18,21 @@
       </div>
     </div>
 
-    <!-- Utils (loaded first, no imports) -->
-    <script src="utils/storage.js"></script>
-    <script src="utils/constants.js"></script>
-    <script src="utils/analytics.js"></script>
+    <!-- Utils (loaded first) -->
+    <script src="./utils/storage.js"></script>
+    <script src="./utils/constants.js"></script>
+    <script src="./utils/analytics.js"></script>
 
     <!-- Components -->
-    <script src="js/components/FloatingElements.js"></script>
-    <script src="js/components/TabButton.js"></script>
-    <script src="js/components/DashboardTab.js"></script>
-    <script src="js/components/ProfileTab.js"></script>
-    <script src="js/components/LogTab.js"></script>
-    <script src="js/components/HistoryTab.js"></script>
+    <script src="./js/components/FloatingElements.js"></script>
+    <script src="./js/components/TabButton.js"></script>
+    <script src="./js/components/DashboardTab.js"></script>
+    <script src="./js/components/ProfileTab.js"></script>
+    <script src="./js/components/LogTab.js"></script>
+    <script src="./js/components/HistoryTab.js"></script>
 
     <!-- App -->
-    <script src="js/app.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
